 * Show a warning if the size limit for syntax highlighting is exceeded.
 * Disable the language button when there is no highlighter.
 * Disable syntax highlighting on printing (because the whole document may not be highlighted).
 * Draw the warning bar as a translucent layer over the tab widget instead of putting it into its layout. Also, animate its appearance and closing.

V0.9.0
---------
 * Changed versioning -- "0.9.0" instead of "0.9", for example.
 * Added an option for the text tab size in terms of spaces.
 * Added "To Upper Case" and "To Lower Case".
 * Always fall back to the URL highlighter (forget the previous conditions). In this way, not only the behavior is more logical but also the code is much simpler.
 * Disable the language button for documents that are made uneditable because of their contents.
 * Open the files of the last window instead of starting with all recent files (if the related option is checked).
 * Restore cursor positions with last window files too.
 * Remove the lock file only at the end, when the config is written, because writing may take some time with cursor positions.
 * Remember the splitter position also when the side-pane is removed.
 * Before focusing an existing side-pane with its toggling shortcut, ensure its visibility.
 * Added the overwrite mode, which is toggled by pressing the Insert key.
 * Added an option for saving unmodified files.
 * Added an option for closing a window on closing its last tab.
 * Fixed a regression in recognizing special files (started when QRegExp was replaced by QRegularExpression).
 * Added Ctrl+Up/Down for scrolling by one line without moving the cursor.
 * Added Meta+Up/Down for going to the same position in the previous/next unwrapped line.
 * Added shortcuts (Ctrl+Shift+Up/Down) for moving lines.
 * Added a history popup to the search bar.
 * Set the window title to the path.
 * Also open paths that point to nonexistent files (to save them later).