@@ -12,6 +12,7 @@ FeatherPad (by Pedram Pourang, a.k.a. Tsu Jan <tsujan2000@gmail.com>) is a light
   * Support for showing line numbers and jumping to a specific line;
   * Automatic detection of text encoding as far as possible and optional saving with encoding;
   * Syntax highlighting for common programming languages;
+  * Ability to open URLs with appropriate applications;
   * Session management;
   * Side-pane mode;
   * Auto-saving;
