@@ -2252,32 +2252,32 @@ fenestroj estos inkluzivitaj de la konservota sesio.</translation>
 <context>
     <name>FeatherPad::TextEdit</name>
     <message>
-        <location filename="../../textedit.cpp" line="134"/>
+        <location filename="../../textedit.cpp" line="135"/>
         <source>Double click to center current line</source>
         <translation>Duoble klaku por centrigi la aktivan linion</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1537"/>
+        <location filename="../../textedit.cpp" line="1538"/>
         <source>Open Link</source>
         <translation>Malfermu la Ligilon</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1547"/>
+        <location filename="../../textedit.cpp" line="1551"/>
         <source>Copy Link</source>
         <translation>Kopiu la Ligilon</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1560"/>
+        <location filename="../../textedit.cpp" line="1564"/>
         <source>To Upper Case</source>
         <translation>Majuskligo</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1564"/>
+        <location filename="../../textedit.cpp" line="1568"/>
         <source>To Lower Case</source>
         <translation>Minuskligo</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1570"/>
+        <location filename="../../textedit.cpp" line="1574"/>
         <source>Paste Date and Time</source>
         <translation>Algluu la Daton kaj Tempon</translation>
     </message>
