@@ -2217,32 +2217,32 @@ oknach zostaną uwzględnione w zapisanej sesji.</translation>
 <context>
     <name>FeatherPad::TextEdit</name>
     <message>
-        <location filename="../../textedit.cpp" line="134"/>
+        <location filename="../../textedit.cpp" line="135"/>
         <source>Double click to center current line</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1537"/>
+        <location filename="../../textedit.cpp" line="1538"/>
         <source>Open Link</source>
         <translation>Otwórz odnośnik</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1547"/>
+        <location filename="../../textedit.cpp" line="1551"/>
         <source>Copy Link</source>
         <translation>Kopiuj odnośnik</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1560"/>
+        <location filename="../../textedit.cpp" line="1564"/>
         <source>To Upper Case</source>
         <translation>Przekształć na wielkie litery</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1564"/>
+        <location filename="../../textedit.cpp" line="1568"/>
         <source>To Lower Case</source>
         <translation>Przekształć na małe litery</translation>
     </message>
     <message>
-        <location filename="../../textedit.cpp" line="1570"/>
+        <location filename="../../textedit.cpp" line="1574"/>
         <source>Paste Date and Time</source>
         <translation>Wklej datę i czas</translation>
     </message>
